<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/home"
                android:title="@string/nombre_menu" />
        </menu>
    </item>

    <item android:title="GYM">
        <menu>
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/iconopesa"
                android:title="@string/nombre_mEjercicios" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/iconomapa"
                android:title="@string/nombre_mUbicacion" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/iconoacerca"
                android:title="@string/nombre_mAcercaDe" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/iconosalir"
                android:title="@string/nombre_salir" />


        </menu>
    </item>

</menu>
